##Text encoding: utf-8

2008-01-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/chem3ddoc.cc: show multiple bonds as multiple cylinders
	in ball and stick mode.
	* libs/gcu/crystaldoc.cc: really hide hidden objects.

2008-01-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: implement SetProperty.
	* libs/gcp/arrow.h: ditto.
	* libs/gcp/mesomery-arrow.cc: set an explicit id prefix.
	* libs/gcp/reaction-arrow.cc: implement SetProperty.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcu/atom.cc: add charge property.
	* libs/gcu/atom.h: ditto.
	* libs/gcu/objprops.h: ditto.
	* plugins/loaders/cdx/cdx.cc:import atom charge and arrows.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2008-01-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fixed triple bonds import.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2008-01-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: load groups.
	* plugins/loaders/cdxml/cdxml.cc: ditto.
	* plugins/paint/selection/group.cc: implement gcpGroup::OnLoaded
	* plugins/paint/selection/group.h: ditto.

2008-01-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: load colors table.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2008-01-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: moved the chemical part of molecules from gcp
	to gcu.
	* libs/gcp/atom.cc: ditto.
	* libs/gcp/atom.h: ditto.
	* libs/gcp/bond.cc: ditto.
	* libs/gcp/bond.h: ditto.
	* libs/gcp/chain.cc: ditto.
	* libs/gcp/chain.h: ditto.
	* libs/gcp/cycle.cc: ditto.
	* libs/gcp/cycle.h: ditto.
	* libs/gcp/document.h: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/molecule.h: ditto.
	* libs/gcu/Makefile.am: ditto.
	* libs/gcu/atom.cc: ditto.
	* libs/gcu/atom.h: ditto.
	* libs/gcu/bond.cc: ditto.
	* libs/gcu/bond.h: ditto.
	* libs/gcu/chain.cc: ditto.
	* libs/gcu/chain.h: ditto.
	* libs/gcu/cycle.cc: ditto.
	* libs/gcu/cycle.h: ditto.